--- a/gui.ui
+++ b/gui.ui
@@ -47,6 +47,12 @@
           <height>32</height>
          </size>
         </property>
+        <property name="gridSize">
+         <size>
+          <width>218</width>
+          <height>34</height>
+         </size>
+        </property>
         <property name="wordWrap">
          <bool>true</bool>
         </property>
@@ -97,14 +103,23 @@ p, li { white-space: pre-wrap; }
     </item>
     <item>
      <widget class="QProgressBar" name="progressBar">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="mouseTracking">
        <bool>false</bool>
+      </property>
+      <property name="minimum">
+       <number>-1</number>
       </property>
       <property name="maximum">
        <number>0</number>
       </property>
       <property name="value">
        <number>0</number>
+      </property>
+      <property name="textVisible">
+       <bool>true</bool>
       </property>
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
